force-app/main/default/objects/APT_R2T_System_Properties__c/APT_R2T_System_Properties__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>R2T System Properties</description>
    <label>R2T System Properties</label>
</CustomObject>