force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_ACIC_Request_Product_types__c.field-meta.xml
<CustomField>
    <fullName>APT_ACIC_Request_Product_types__c</fullName>
    <description>List of product types which requires ACIC request to be true to create a contract</description>
    <label>ACIC Request Product types</label>
    <type>TextArea</type>
</CustomField>