force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Airmail_Rates_Over_2KG_Per_Item_NZ__c.field-meta.xml
<CustomField>
    <fullName>APT_Airmail_Rates_Over_2KG_Per_Item_NZ__c</fullName>
    <inlineHelpText>Airmail Rates &gt;  Over 2KG Per Item for Newzealand</inlineHelpText>
    <label>Airmail Rates Over 2KG Per Item NZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>