force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_AIRPCL_RAF_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_AIRPCL_RAF_Code__c</fullName>
    <inlineHelpText>RAF Code for Air mail Parcels (Over 2kg)</inlineHelpText>
    <label>AIRPCL RAF Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>