force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Cart_Validation_products__c.field-meta.xml
<CustomField>
    <fullName>APT_Cart_Validation_products__c</fullName>
    <inlineHelpText>Enter product names for which &quot;Pricing Reason&quot; and &quot;Competitors&quot; field on cart should be mandatory in case of customized pricing. Each product should be semi-colon separated.</inlineHelpText>
    <label>Cart Validation products</label>
    <type>TextArea</type>
</CustomField>