force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Change_Management__c.field-meta.xml
<CustomField>
    <fullName>APT_Change_Management__c</fullName>
    <inlineHelpText>Contract Fees object -&gt; Record Type ID for Change Management</inlineHelpText>
    <label>Change Management RTID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>