force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_CompanyCreditAssessmentEndPointURL__c.field-meta.xml
<CustomField>
    <fullName>APT_CompanyCreditAssessmentEndPointURL__c</fullName>
    <inlineHelpText>Company/Business Credit Assessment End Point URL</inlineHelpText>
    <label>Company Credit Assessment End Point URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>