force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Contract_Management_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Management_Enquiry__c</fullName>
    <inlineHelpText>Case -&gt;Contract Management Enquiry Record Type ID</inlineHelpText>
    <label>Contract Management Enquiry</label>
    <length>20</length>
    <type>Text</type>
</CustomField>