force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Contract_Templates_To_Uncheck__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Templates_To_Uncheck__c</fullName>
    <label>Contract Templates To Uncheck</label>
    <length>255</length>
    <type>Text</type>
</CustomField>