force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Credit_Assessment_Valid_States__c.field-meta.xml
<CustomField>
    <fullName>APT_Credit_Assessment_Valid_States__c</fullName>
    <inlineHelpText>Valid States for Credit Assessment</inlineHelpText>
    <label>Credit Assessment Valid States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>