force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Default_Price_List_ID__c.field-meta.xml
<CustomField>
    <fullName>APT_Default_Price_List_ID__c</fullName>
    <description>Salesforce ID of default price list that should be populated on new quotes</description>
    <inlineHelpText>Salesforce ID of default price list that should be populated on new quotes</inlineHelpText>
    <label>Default Price List ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>