force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_ECONOMY_RAF_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_ECONOMY_RAF_Code__c</fullName>
    <description>For International Economy</description>
    <label>ECONOMY RAF Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>