force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_EMSMER20_RAF_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_EMSMER20_RAF_Code__c</fullName>
    <inlineHelpText>RAF Code for Express Courier International(EMSMER20)</inlineHelpText>
    <label>EMSMER20 RAF Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>