force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Enable_Classic_UI__c.field-meta.xml
<CustomField>
    <fullName>APT_Enable_Classic_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>set as true if you want to enable Classic UI for Apttus CPQ. False means ngCPQ UI.</inlineHelpText>
    <label>Enable Classic UI?</label>
    <type>Checkbox</type>
</CustomField>