force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Express_Courier_UpTo_2KG_Per_Item_NZ__c.field-meta.xml
<CustomField>
    <fullName>APT_Express_Courier_UpTo_2KG_Per_Item_NZ__c</fullName>
    <inlineHelpText>Express Courier Rates &gt; Up To 2KG Per Item for Newzealand</inlineHelpText>
    <label>Express Courier Up To 2KG Per Item NZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>