force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_EXPRESS_MERCH_Weight_Range_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_EXPRESS_MERCH_Weight_Range_Code__c</fullName>
    <description>For International Express Merchandise</description>
    <label>EXPRESS MERCH Weight Range Code</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>