force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_HoldingUserID__c.field-meta.xml
<CustomField>
    <fullName>APT_HoldingUserID__c</fullName>
    <description>This is used to identify the holding user for the batch &quot;ContractOwnerUpdateBatch&quot;</description>
    <inlineHelpText>Holding User Id</inlineHelpText>
    <label>APT_HoldingUserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>