force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_INDV_Credit_Assessment_End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>APT_INDV_Credit_Assessment_End_Point_URL__c</fullName>
    <inlineHelpText>Individual Credit Assessment End Point URL</inlineHelpText>
    <label>Individual CreditAssessment EndPoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>