force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Maximum_Transit_Cover__c.field-meta.xml
<CustomField>
    <fullName>APT_Maximum_Transit_Cover__c</fullName>
    <inlineHelpText>Maximum Transit Cover for Transit Cover Details</inlineHelpText>
    <label>Maximum Transit Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>