force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Non_Standard_Contract_Threshold__c.field-meta.xml
<CustomField>
    <fullName>APT_Non_Standard_Contract_Threshold__c</fullName>
    <label>Non-Standard Contract Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>