force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Org_Id_Service_End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>APT_Org_Id_Service_End_Point_URL__c</fullName>
    <inlineHelpText>Org Id Service Endpoint URL</inlineHelpText>
    <label>Org Id Service End Point URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>