force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_PostbillpayRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>APT_PostbillpayRecordTypeID__c</fullName>
    <label>Postbillpay Record Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>