force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_PricingBatchStatusEmailNotification__c.field-meta.xml
<CustomField>
    <fullName>APT_PricingBatchStatusEmailNotification__c</fullName>
    <description>System will send email alerts to specified email addresses once pricing batch job is completed</description>
    <inlineHelpText>System will send email alerts with job status to specified email addresses once pricing batch job is completed. User can provided email addresses comma separated .</inlineHelpText>
    <label>Pricing Batch Status Email Notification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>