force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Query_Rate_Card_End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>APT_Query_Rate_Card_End_Point_URL__c</fullName>
    <inlineHelpText>Query Rate Card End Point URL</inlineHelpText>
    <label>Query Rate Card End Point URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>