force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_ReversalFees__c.field-meta.xml
<CustomField>
    <fullName>APT_ReversalFees__c</fullName>
    <description>Contract Fees object -&gt; Record Type ID for Reversal Fee</description>
    <label>Reversal Fee RTID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>