force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Show_Calculated_Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>APT_Show_Calculated_Estimated_Revenue__c</fullName>
    <description>User needs to put comma separated product codes for which they want to show the button</description>
    <inlineHelpText>User needs to put comma separated product codes for which they want to show the button</inlineHelpText>
    <label>Show Calculated Estimated Revenue Button</label>
    <length>100</length>
    <type>Text</type>
</CustomField>