force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Sync_Contract_Rate_End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>APT_Sync_Contract_Rate_End_Point_URL__c</fullName>
    <inlineHelpText>Sync Contract Rate End Point URL</inlineHelpText>
    <label>Sync Contract Rate End Point URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>