force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_User_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_User_Name__c</fullName>
    <inlineHelpText>User Name will be used while web service call</inlineHelpText>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>