force-app/main/default/objects/APT_R2T_System_Properties__c/fields/APT_Zone_4_Dispersion__c.field-meta.xml
<CustomField>
    <fullName>APT_Zone_4_Dispersion__c</fullName>
    <inlineHelpText>Zone 4 Dispersion(%)</inlineHelpText>
    <label>Zone 4 Dispersion(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>