force-app/main/default/objects/APT_R2T_System_Properties__c/fields/BatchSize_ContractOwnUpdBatch__c.field-meta.xml
<CustomField>
    <fullName>BatchSize_ContractOwnUpdBatch__c</fullName>
    <description>This field is used to store the batch size for batch ContractOwnerUpdateBatch and is referenced in scheduler - ContractOwnerUpdateBatch_Schedule</description>
    <inlineHelpText>Batch Size for ContractOwnerUpdateBatch</inlineHelpText>
    <label>BatchSize_ContractOwnerUpdateBatch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>