force-app/main/default/objects/APT_R2T_System_Properties__c/fields/CRMSupportUserEmail__c.field-meta.xml
<CustomField>
    <fullName>CRMSupportUserEmail__c</fullName>
    <description>This field will store the email address of user who will receive apex batch run communication for success or failure. Currently being used for the batch ContractOwnerUpdateBatch</description>
    <label>CRMSupportUserEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>