force-app/main/default/objects/APT_R2T_System_Properties__c/fields/Transaction_Fee_Reord_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee_Reord_Type_ID__c</fullName>
    <inlineHelpText>Contract Fees object -&gt; Transaction Fee Record Type</inlineHelpText>
    <label>Transaction Fee Reord Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>